--- a/Tables/Table1.tex
+++ b/Tables/Table1.tex
@@ -1,15 +1,11 @@
-\begin{table}[htbp]
-    \centering
-    \def\arraystretch{1.5}
-    \begin{tabular}{|p{2cm}|p{2cm}|}
-    \hline
-    Symbols&Definition \\  \hline
-    x&Displacement \\  \hline
-    t&Time \\ \hline
-    v&Velocity \\ \hline
-    $\omega$&Angular velocity \\  \hline
-    $\Theta$&Phase constant \\  \hline
-    \end{tabular}
-    \caption{Symbols and their definitions}
-    \label{tab:Table1}
+\begin{table}[h]
+\begin{tabular}{|l|l|}
+\hline
+\textbf{Symbols} & \textbf{Definition}\\ \hline
+$x$ & Displacement \\ \hline
+$t$ & Time \\ \hline
+$v$ & Velocity\\ \hline
+$\omega$ & Angular velocity   \\ \hline
+$\theta$ & Phase constant\\ \hline
+\end{tabular}
 \end{table}
